--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,8 +1,7 @@
 <ion-header>
   <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+      <button menuToggle><ion-icon name="menu"></ion-icon></button>
+      <ion-title>HomePage</ion-title>
   </ion-navbar>
 </ion-header>
 
