Musical note component

--- a/src/pages/chords/list/list.html
+++ b/src/pages/chords/list/list.html
@@ -13,4 +13,9 @@
 
 <ion-content padding>
     <p>...</p>
+    <musical-note note="C" direction="up"></musical-note>
+    <musical-note note="B" direction="up"></musical-note>
+
+
+    <p>...</p>
 </ion-content>
