Test for stacking pages

--- a/src/pages/chords/list/list.html
+++ b/src/pages/chords/list/list.html
@@ -13,9 +13,6 @@
 
 <ion-content padding>
     <p>...</p>
-    <musical-note note="C" direction="up"></musical-note>
-    <musical-note note="B" direction="up"></musical-note>
-
-
+    <a (click)="showLink()">Link</a>
     <p>...</p>
 </ion-content>
