New component chord-name and note-name

--- a/src/pages/chords/list.html
+++ b/src/pages/chords/list.html
@@ -14,7 +14,10 @@
 <ion-content>
     <div class="chords">
         <ion-card *ngFor="let chord of getChords()" class="chord">
-            <ion-card-header>{{chord.note.name}} - {{chord.type.name}}</ion-card-header>
+            <ion-card-header>
+                <chord-name [note]="chord.note" [french]="config.ChordsOptions.show_note_in_french" [type]="chord.type"></chord-name><br />
+            
+            </ion-card-header>
             <chord-position [position]="getFirstPosition(chord)"></chord-position>
             <ion-list>
                 <button ion-item>
