--- a/src/pages/chords/list.html
+++ b/src/pages/chords/list.html
@@ -20,7 +20,7 @@
             </ion-card-header>
             <chord-position [position]="getFirstPosition(chord)"></chord-position>
             <ion-list>
-                <button ion-item>
+                <button ion-item (click)="showDetail(chord)">
                     <ion-icon name="musical-note" item-left></ion-icon>
                     Details
                 </button>
