--- a/src/pages/chords/list.html
+++ b/src/pages/chords/list.html
@@ -13,6 +13,6 @@
 
 <ion-content>
     <div class="chords">
-        <chord-card *ngFor="let chord of getChords()" [note]="chord.note.name" [type]="chord.type.name" position="0" (onDetailClicked)="showDetail($event)" (asas)="asas"></chord-card>
+        <chord-card *ngFor="let chord of getChords()" [note]="chord.note.name" [type]="chord.type.name" position="0" (onDetailClicked)="showDetail($event)"></chord-card>
     </div>
 </ion-content>
