--- a/src/pages/chords-favorites/chords-favorites.html
+++ b/src/pages/chords-favorites/chords-favorites.html
@@ -5,7 +5,7 @@
       </ion-buttons>
       <ion-title>Favorites</ion-title>
       <ion-buttons end>
-          <button ion-button icon-only><ion-icon name="settings"></ion-icon></button>
+          <button (click)="showPopup($event, 'options')" ion-button icon-only><ion-icon name="settings"></ion-icon></button>
       </ion-buttons>
   </ion-navbar>
 </ion-header>
