--- a/src/pages/chords-detail/chords-detail.html
+++ b/src/pages/chords-detail/chords-detail.html
@@ -16,7 +16,7 @@
             </ion-card-header>
             <ion-row class="scale">
                 <ion-col *ngFor="let note of chord.scales; let i = index;">
-                    <note-name [ngClass]="{'active':type.scale_parts.indexOf(i+1) >= 0}" [note]="note"></note-name>
+                    <note-name [ngClass]="{'active':type.scale_parts.indexOf(i+1) >= 0}" [note]="note" [french]="config.ChordsOptions.show_note_in_french"></note-name>
                 </ion-col>
             </ion-row>
         </ion-card>
@@ -27,7 +27,7 @@
             </ion-card-header>
             <ion-row class="scale">
                 <ion-col *ngFor="let note of chord.scales">
-                    <note-name [note]="note"></note-name>
+                    <note-name [note]="note" [french]="config.ChordsOptions.show_note_in_french"></note-name>
                 </ion-col>
             </ion-row>
         </ion-card>
@@ -37,8 +37,8 @@
                 Strings Name
             </ion-card-header>
             <ion-row class="scale">
-                <ion-col *ngFor="let note of chord.scales">
-                    <note-name [note]="note"></note-name>
+                <ion-col *ngFor="let note of getStrings()">
+                    <note-name [note]="note" [french]="config.ChordsOptions.show_note_in_french"></note-name>
                 </ion-col>
             </ion-row>
         </ion-card>
@@ -49,7 +49,7 @@
             </ion-card-header>
             <ion-row class="scale">
                 <ion-col *ngFor="let note of chord.scales">
-                    <note-name [note]="note"></note-name>
+                    <note-name [note]="note" [french]="config.ChordsOptions.show_note_in_french"></note-name>
                 </ion-col>
             </ion-row>
         </ion-card>
