--- a/src/pages/chords-favorites/chords-favorites.html
+++ b/src/pages/chords-favorites/chords-favorites.html
@@ -11,7 +11,11 @@
 </ion-header>
 
 <ion-content>
-    <div class="chords">
+    <div class="chords" *ngIf="favorites.all().length > 0">
         <chord-card *ngFor="let favorite of favorites.all()" [note]="favorite.note" [type]="favorite.type" [family]="favorite.family" [position]="favorite.position" (onDetailClicked)="showDetail($event)"></chord-card>
+    </div>
+
+    <div class="label-container" *ngIf="favorites.all().length == 0">
+        <p>No favorite!</p> 
     </div>
 </ion-content>
