--- a/src/modals/chords-quiz/chords-quiz.html
+++ b/src/modals/chords-quiz/chords-quiz.html
@@ -12,11 +12,13 @@
 </ion-header>
 
 <ion-content>
+
     <ion-list radio-group [(ngModel)]="config.ChordsFilters.list_chord_type" (ionChange)="onFilterChanged()">
-        <ion-list-header>Choisir entre ses types</ion-list-header>
+        <ion-list-header>Choisir les types disponibles</ion-list-header>
         <ion-item *ngFor="let type of data.types">
             <ion-label>{{type.name}}</ion-label>
             <ion-radio [value]="type.name"></ion-radio>
         </ion-item>
     </ion-list>
+
 </ion-content>
