Before cleaning the provider

--- a/src/pages/chords-quiz/chords-quiz.html
+++ b/src/pages/chords-quiz/chords-quiz.html
@@ -21,7 +21,7 @@
             <button (click)="showConfiguration()" ion-button clear>Configuration</button>
         </ion-row>
         <ion-row>
-            XYZ accords
+            {{getChords().length}} accords
         </ion-row>
     </div>
 
