--- a/src/modals/chords-quiz/chords-quiz.html
+++ b/src/modals/chords-quiz/chords-quiz.html
@@ -22,19 +22,11 @@
         </ion-item>
     </ion-list>
 
-    <ion-list radio-group [(ngModel)]="config.ChordsFilters.quiz_use_favorites">
+    <ion-list radio-group>
         <ion-item-divider>Favoris</ion-item-divider>
         <ion-item>
-            <ion-label>Exclure</ion-label>
-            <ion-radio value="exclude"></ion-radio>
-        </ion-item>
-        <ion-item>
-            <ion-label>Inclure</ion-label>
-            <ion-radio value="include"></ion-radio>
-        </ion-item>
-        <ion-item>
             <ion-label>Seulement utiliser ces accords</ion-label>
-            <ion-radio value="only" [disabled]="this.favorites.all().length == 0"></ion-radio>
+            <ion-toggle value="exclude" [(ngModel)]="config.ChordsFilters.quiz_use_favorites" [disabled]="this.favorites.all().length == 0"></ion-toggle>
         </ion-item>
     </ion-list>
 
