--- a/src/pages/chords-list/chords-list.html
+++ b/src/pages/chords-list/chords-list.html
@@ -3,7 +3,7 @@
       <ion-buttons start>
           <button ion-button menuToggle icon-only><ion-icon name="menu"></ion-icon></button>
       </ion-buttons>
-      <ion-title>Chords</ion-title>
+      <ion-title>Accords</ion-title>
       <ion-buttons end>
           <button (click)="showPopup($event, 'filters')" ion-button outline="true">{{config.ChordsFilters.list_chord_type}}</button>
           <button (click)="showPopup($event, 'options')" ion-button icon-only><ion-icon name="settings"></ion-icon></button>
