--- a/src/popovers/chords-options/chords-options.html
+++ b/src/popovers/chords-options/chords-options.html
@@ -1,6 +1,6 @@
 <ion-list>
     <ion-item>
-        <ion-label>Show French name</ion-label>
+        <ion-label>Voir en français</ion-label>
         <ion-toggle [(ngModel)]="config.ChordsOptions.show_note_in_french" (ionChange)="onOptionChanged()"></ion-toggle>
     </ion-item>
 </ion-list>
