--- a/src/pages/chords-favorites/chords-favorites.html
+++ b/src/pages/chords-favorites/chords-favorites.html
@@ -3,7 +3,7 @@
       <ion-buttons start>
           <button ion-button menuToggle icon-only><ion-icon name="menu"></ion-icon></button>
       </ion-buttons>
-      <ion-title>Favorites</ion-title>
+      <ion-title>Favoris</ion-title>
       <ion-buttons end>
           <button (click)="showPopup($event, 'options')" ion-button icon-only><ion-icon name="settings"></ion-icon></button>
       </ion-buttons>
@@ -16,6 +16,6 @@
     </div>
 
     <div class="label-container" *ngIf="favorites.all().length == 0">
-        <p>No favorite!</p> 
+        <p>Aucun favori!</p> 
     </div>
 </ion-content>
